fix(kitchenpos): apply feedback